<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/house_chimney"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/calendar_clock"
        android:title="@string/title_activuty_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/calendar_check"
        android:title="@string/title_activity_finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite_24"
        android:title="@string/favorite"

        />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/favorite_24"
        android:title="@string/setting"

        />

</menu>